<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_synthesizer_avtivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.example.li89368.synthesizerversion2.SynthesizerAvtivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:id="@+id/textView"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scaleButton"
        android:id="@+id/scaleButton"
        android:onClick="onClick"
        android:layout_below="@+id/bButton"
        />

    <Button
        android:text="@string/bButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bButton"
        android:onClick="onButton6Click"
        android:layout_below="@+id/aButton"
        />

    <Button
        android:text="@string/dButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dButton"
        android:onClick="onButton10Click"
        android:layout_below="@+id/csButton"
        />

    <Button
        android:text="@string/gButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gButton"
        android:onClick="onButton3Click"
        android:layout_below="@+id/fButton"
        />

    <Button
        android:text="@string/bbButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bbButton"
        android:onClick="onButton7Click"
        android:layout_below="@+id/bButton"
        />

    <Button
        android:text="@string/aButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/aButton"
        android:onClick="onButton5Click"
        android:layout_below="@+id/gsButton"
        />

    <Button
        android:text="@string/fButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fButton"
        android:onClick="onButton2Click"
        android:layout_below="@+id/eButton"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eButton"
        android:id="@+id/eButton"
        android:onClick="onB]utton1Click"
        />

    <Button
        android:text="@string/cButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cButton"
        android:onClick="onButton8Click"
        android:layout_below="@+id/bbButton"
        />

    <Button
        android:text="@string/gsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gsButton"
        android:onClick="onButton4Click"
        android:layout_below="@+id/gButton"
        />

    <Button
        android:text="@string/csButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/csButton"
        android:onClick="onButton9Click"
        android:layout_below="@+id/cButton"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dsButton"
        android:id="@+id/dsButton"
        android:onClick="onButton11Click"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/littlestar2Button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fsButton"
        android:id="@+id/fsButton"
        android:onClick="onButton12Click"
        android:layout_below="@+id/dsButton"
        android:layout_alignEnd="@+id/dsButton"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highfsButton"
        android:id="@+id/highfsButton"
        android:onClick="onButton15Click"
        android:layout_below="@+id/highfButton"
        android:layout_alignEnd="@+id/highfButton"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/littlestar1Button"
        android:id="@+id/littlestar1Button"
        android:onClick="onClick2"
        android:layout_below="@+id/arrayButton"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highfButton"
        android:id="@+id/highfButton"
        android:onClick="onButton14Click"
        android:layout_below="@+id/higheButton"
        android:layout_alignEnd="@+id/higheButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/higheButton"
        android:id="@+id/higheButton"
        android:onClick="onButton13Click"
        android:layout_below="@+id/littlestar2Button"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highgButton"
        android:id="@+id/highgButton"
        android:onClick="onButton16Click"
        android:layout_below="@+id/highfsButton"
        android:layout_alignEnd="@+id/fsButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/littlestar2Button"
        android:id="@+id/littlestar2Button"
        android:onClick="onClick3"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrayButton"
        android:id="@+id/arrayButton"
        android:onClick="onClick4"
        android:layout_marginStart="15dp"
        android:layout_alignTop="@+id/bButton"
        android:layout_alignStart="@+id/fsButton"
        android:layout_marginTop="15dp" />


</RelativeLayout>
